--- a/templates/managerMenu.html
+++ b/templates/managerMenu.html
@@ -18,8 +18,8 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Compras<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="./?action=elegirTipo">Comprar Producto</a></li>
-						<li><a href="./?action=compras">Ver Compras</a></li>
+						<li><a href="./?action=formIncidente">Comprar Producto</a></li>
+						<li><a href="./?action=incidentesList">Ver Compras</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#">Ver Estados</a></li>
 					</ul>
