--- a/templates/selectType.html
+++ b/templates/selectType.html
@@ -9,7 +9,7 @@
 			<label class="col-md-4 control-label" for="productType">Tipo de Producto</label>
 			<div class="col-md-4">
 				<select id="productType" name="productType" class="chosen" data-placeholder="Seleccione un Tipo de Producto" onchange="">
-					<option value=""></option>
+					<option value="">Seleccionar tipo</option>
 					{% for tipo in tipos %}
 						<option value="{{ tipo.initials }}">{{ tipo.description }}</option>
 					{% endfor %}
@@ -18,8 +18,7 @@
 		</div>
 		<div class="form-group">
 			<div class="col-lg-offset-4 col-md-6">
-				<input type="reset" class="btn btn-reset" value="Limpiar Formulario">
-				<input type="submit" class="btn btn-primary" value="Guardar">
+				<input type="submit" class="btn btn-primary" value="Aceptar">
 			</div>
 		</div>
 	</form>
