ultimos cambios, seleccion cantidad y cupon

--- a/templates/productList.html
+++ b/templates/productList.html
@@ -28,7 +28,7 @@
 							<td class="dato">{{ product.costprice }}</td>
 							<td class="dato">{{ product.saleprice }}</td>
 							<td class="dato">{{ product.type }}</td>
-							<td class="dato"><a href="./?action=buyItem&amp;productId={{product.id}}" class="glyphicon glyphicon-pencil" title="Comprar"></a></td>
+							<td class="dato"><a href="./?action=selectQuantityAndCoupon&amp;productId={{product.id}}" class="glyphicon glyphicon-pencil" title="Comprar"></a></td>
 						</tr>
 					{% endfor %}
 				</tbody>
