--- a/templates/cantidad_cupon.html
+++ b/templates/cantidad_cupon.html
@@ -22,7 +22,7 @@
 				<div class="form-group">
 					<label for="cupon" class="col-md-4 control-label">Cup&oacute;n</label>
 					<div class="col-md-4">
-						<input type="number" id="cupon" class="form-control" min="0" name="cupon" placeholder="Cup&oacute;n">
+						<input type="number" id="cupon" class="form-control" min="0" value="0" name="cupon" placeholder="Cup&oacute;n">
 					</div>
 				</div>
 				<div class="form-group">
