--- a/templates/layoutBackend.html
+++ b/templates/layoutBackend.html
@@ -20,6 +20,10 @@
 	<!-- CHOSEN -->
 	<script src="js/chosen.jquery.min.js" type="text/javascript"></script>
 
+	<!-- HIGHCHARTS -->
+	<script src="js/highcharts.js" type="text/javascript"></script>
+	<script src="js/exporting.js" type="text/javascript"></script>
+
 	<!-- Funciones JS-->
 	<script src="js/scripts.js" type="text/javascript"></script>
 	<script type="text/javascript">
