--- a/templates/managerMenu.html
+++ b/templates/managerMenu.html
@@ -8,23 +8,33 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="./?action=indexUser">Brand</a>
+			<a class="navbar-brand" href="./?action=indexManager">Jerarquico</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="./?action=indexUser">Inicio<span class="sr-only">(current)</span></a></li>
+				<li class="active"><a href="./?action=indexManager">Inicio<span class="sr-only">(current)</span></a></li>
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Compras<span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Metricas<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="./?action=formIncidente">Comprar Producto</a></li>
-						<li><a href="./?action=incidentesList">Ver Compras</a></li>
+						<li><a href="./?action=productosVendidos">Productos vendidos</a></li>
+						<li><a href="./?action=electronicosVendidos">Electrodomesticos vendidos</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#">Ver Estados</a></li>
+						<li><a href="./?action=">Cupones utilizados</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="./?action=productosVendidosEmpleados">Compras de empleados</a></li>
+						<li><a href="./?action=">Compras de clientes</a></li>
 					</ul>
 				</li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
 </nav>
+<!--
+cantidad de productos vendidos en un rango de  fechas.
+cantidad de cupones utilizados en un rango de fechas.
+cantidad de electrodomésticos vendidos en un rango de fechas
+cantidad de productos vendidos a usuarios empleados.
+cantidad de productos vendidos a usuarios no empleados.
+-->
