--- a/templates/managerMenu.html
+++ b/templates/managerMenu.html
@@ -21,10 +21,9 @@
 						<li><a href="./?action=productosVendidos">Productos vendidos</a></li>
 						<li><a href="./?action=electronicosVendidos">Electrodomesticos vendidos</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="./?action=">Cupones utilizados</a></li>
+						<li><a href="./?action=cuponesUtilizados">Cupones utilizados</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="./?action=productosVendidosEmpleados">Compras de empleados</a></li>
-						<li><a href="./?action=">Compras de clientes</a></li>
+						<li><a href="./?action=productosVendidosEmpleados">Compras de empleados y clientes</a></li>
 					</ul>
 				</li>
 			</ul>
